<resources>
    <string name="app_name">CSI 04</string>
    <string name="gps_network_not_enabled">กรุณาเปิดใช้งานระบบ GPS</string>
    <string name="open_location_settings">เปิดการตั้งค่า GPS</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="offline_mode_status">โหมดออฟไลน์</string>
    <string name="network_unavailable">กรุณาเชื่อมต่ออินเตอร์เน็ตก่อนใช้งาน</string>
    <string name="cannot_connect_server">ไม่สามารถเชื่อมต่อเซิร์ฟเวอร์ได้ กรุณาลองเปลี่ยน IP</string>
    <string name="cannot_connect_server_offline">โหมดออฟไลน์ ไม่สามารถเชื่อมต่อเซิร์ฟเวอร์ได้ กรุณาลองเปลี่ยน IP ใหม่</string>
    <string name="offline_mode">โหมดออฟไลน์ กรุณาตรวจสอบการเชื่อมต่อ</string>
    <string name="please_input_data">กรุณาป้อนข้อมูล</string>
    <string name="save">บันทึก</string>
    <string name="network_error">กรุณาตรวจสอบการเชื่อมต่ออินเตอร์เน็ต</string>
    <string name="error_data">เกิดข้อผิดพลาดบางประการ</string>
    <string name="save_complete">บันทึกเรียบร้อย</string>
    <string name="delete_complete">ลบข้อมูลเรียบร้อย</string>
    <string name="download_complete">ดาวน์โหลดไฟล์เรียบร้อย</string>
    <string name="download_error">ดาวน์โหลดไฟล์ไม่สำเร็จ</string>
    <string name="cancel">ยกเลิก</string>
    <string name="ok">ตกลง</string>
    <string name="delete">ลบ</string>
    <string name="next">ถัดไป</string>
    <string name="current_ip_server">IP Server ปัจจุบัน:</string>
    <string name="please_input_username">กรุณากรอก Username</string>
    <string name="please_input_password">กรุณากรอก Password</string>
    <string name="authenticating">ตรวจสอบสิทธิ์...</string>
    <string name="send_token">กำลังเตรียมข้อมูลระบบ...</string>
    <string name="processing">กำลังดำเนินการ...</string>
    <string name="update_database">อัพเดทฐานข้อมูล...</string>
    <string name="delete_noticecase">ยืนยันเพื่อลบคดีนี้</string>
    <string name="upload_noticecase">ยืนยันเบันทึกคดีนี้ไปยังเซิร์ฟเวอร์</string>
    <string name="send_noticecase">ส่งเรื่องเเจ้งเหตุไปยัง...</string>
    <string name="upload_progress">กำลังอัพเดตข้อมูล...</string>
    <string name="save_error">บันทึกข้อมูลไม่สำเร็จ</string>
    <string name="edit">แก้ไข</string>
    <string name="txt_yo_yo">CSI Management System</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">เปลี่ยนค่า IP</string>
    <string name="gcm_defaultSenderId">250026670771</string>
    <string name="login">เข้าสู่ระบบ</string>
    <string name="login_error_message">Username or Password is incorrect.</string>
    <string name="logout">ออกจากระบบ</string>
    <string name="setip">ตั้งค่า IP</string>
    <string name="th_appname">ระบบบันทึกข้อมูลการตรวจสถานที่เกิดเหตุ</string>
    <string name="inq_appname">ข้อมูลแจ้งเหตุ</string>
    <string name="home">รายการคดี</string>
    <string name="receivingcase">งานเข้า</string>
    <string name="draftcsidata">กำลังตรวจ</string>
    <string name="fullcsidata">ตรวจเสร็จแล้ว</string>
    <string name="noticase">แจ้งเหตุ</string>
    <string name="accept">รับเรื่อง</string>
    <string name="done">ตรวจแล้ว</string>
    <string name="listcase">รายการคดี</string>
    <string name="schedule">ตารางเวร</string>
    <string name="policelist">รายชื่อ</string>
    <string name="notification">การแจ้งเตือน</string>
    <string name="settings">ตั้งค่า</string>
    <string name="more">อื่นๆ</string>
    <string name="profile">ข้อมูลส่วนตัว</string>
    <string name="change_pass">เปลี่ยนรหัสผ่าน</string>
    <string name="form_csi">บันทึกข้อมูลการตรวจสถานที่เกิดเหตุ</string>
    <string name="start_new">New</string>
    <string name="brush">Brush</string>
    <string name="erase">Erase</string>
    <string name="paint">Paint</string>
    <string name="sml">Small</string>
    <string name="med">Medium</string>
    <string name="lrg">Large</string>
    <string name="ad_title">ออกจากระบบ</string>
    <string name="ad_message">คุณต้องการออกจากระบบใช่หรือไม่</string>
    <string name="ad_negativeButton">ไม่</string>
    <string name="ad_positiveButton">ใช่</string>
    <string name="choose_format_title">Choose Audio Format</string>
    <string name="start_recording">Record</string>
    <string name="stop_recording">Stop</string>
    <string name="audio_format">Format</string>
    <string name="savepic">บันทึกภาพ</string>
    <string name="deletepic">ลบรูปภาพ</string>
    <string name="delete_photo_success">ลบภาพเรียบร้อยเเล้ว</string>
    <string name="no_photo">ไม่มีไฟล์ภาพนี้ในหน่วยความจำเครื่อง</string>
    <string name="save_photo_success">บันทึกภาพเเล้ว</string>
    <string name="delete_video_success">ลบวิดีโอเรียบร้อยเเล้ว</string>
    <string name="save_video_success">บันทึกวิดีโอเเล้ว</string>
    <string name="no_video">ไม่มีไฟล์วิดีโอนี้ในหน่วยความจำเครื่อง</string>
    <string name="got_video">มีไฟล์วิดีโอนี้เเล้ว</string>
    <string name="got_photo">มีไฟล์ภาพนี้เเล้ว</string>
    <string name="got_voice">มีไฟล์เสียงนี้เเล้ว</string>
    <string name="download_voice">ดาวน์โหลดไฟล์เสียง</string>
    <string name="delete_voice">ลบไฟล์เสียง</string>
    <string name="delete_error">ลบข้อมูลไม่สำเร็จ</string>
    <string name="save_voice_success">บันทึกไฟล์เสียงเเล้ว</string>
    <string name="no_voice">ไม่มีไฟล์เสียงนี้ในหน่วยความจำเครื่อง</string>
    <string name="call">โทร</string>
    <string name="view">ดู</string>
    <string name="receive_case">รับตรวจ</string>
    <string name="notice_case">แจ้งเหตุ</string>
    <string name="export_doc">ออกรายงานสรุปคดี</string>
    <string name="report_no">รายงานที่</string>
    <string name="report_no_2">เลขที่ / พ.ศ.</string>
    <string name="case_type">คดีเกี่ยวกับ</string>
    <string name="subcase_type">ประเภทคดี</string>
    <string name="inquiry_txt">พนักงานสอบสวน:</string>
    <string name="inv_txt">ผู้ตรวจสถานที่เกิดเหตุ:</string>
    <string name="tel_2">โทร.</string>
    <string name="police_station">สถานีตำรวจ:</string>
    <string name="txtStatusTitle">สถานะคดี:</string>
    <string name="txtSceneNoticeDateTime">วันเวลาที่ผู้ตรวจสถานที่เกิดเหตุออกไปตรวจ:</string>
    <string name="edtCompleteSceneDateTimeTitle">วันเวลาที่ตรวจคดีเสร็จ:</string>
    <string name="txtUpdateDateTimeTitle">วันเวลาที่แก้ไขข้อมูลล่าสุด:</string>
    <string name="txtAssignDateTimeTitle">วันเวลาที่จ่ายงาน:</string>
    <string name="edtStatus_1">รับแจ้ง</string>
    <string name="edtStatus_2">แจ้งเหตุ</string>
    <string name="edtStatus_3">รับเรื่อง</string>
    <string name="edtStatus_4">รอตรวจ</string>
    <string name="edtStatus_5">กำลังตรวจ</string>
    <string name="edtStatus_6">ตรวจเสร็จ</string>
    <string name="edtStatus_7">รายงานเสร็จ</string>
    <string name="casestatus_1">receive</string>
    <string name="casestatus_2">notice</string>
    <string name="casestatus_3">assign</string>
    <string name="casestatus_4">accept</string>
    <string name="casestatus_5">investigating</string>
    <string name="casestatus_6">investigated</string>
    <string name="casestatus_7">reported</string>
    <string name="delete_case">ลบคดี</string>
    <string name="upload_case">อัพโหลดข้อมูล</string>
    <string name="searchlatlng">ค้นหาพิกัดที่เกิดเหตุ</string>
    <string name="searchmap">นำเส้นทาง</string>
    <string name="updatedata">อัพเดทล่าสุด </string>
    <string-array name="accesstype">
        <item>ผู้ตรวจสถานที่เกิดเหตุ</item>
        <item>พนักงานสอบสวน</item>
    </string-array>
    <string-array name="subcasetypeproperties">
        <item>ลักทรัพย์</item>
        <item>ปล้นทรัพย์</item>
        <item>ชิงทรัพย์</item>
        <item>อื่นๆ</item>
    </string-array>
    <string-array name="casetype">
        <item>ทรัพย์</item>
        <item>ชีวิต</item>
        <item>เพลิงไหม้</item>
        <item>จราจร</item>
        <item>ระเบิด</item>
        <item>อื่นๆ</item>
    </string-array>
    <string-array name="suffererStatus">
        <item>เจ้าของบ้าน</item>
        <item>ผู้เช่าอาศัย</item>
        <item>ตัวแทนบริษัทฯ</item>
        <item>ผู้เสียหาย</item>
        <item>เพื่อนบ้าน</item>
        <item>สามีของเจ้าของบ้าน</item>
        <item>ภรรยาของเจ้าของบ้าน</item>
        <item>คนสวน</item>
        <item>แม่บ้าน</item>
        <item>พนักงาน</item>
        <item>เจ้าอาวาส</item>
        <item>สามเณร</item>
    </string-array>
    <string-array name="type_Receive">
        <item>หนังสือ</item>
        <item>โทรศัพท์</item>
        <item>วิทยุ</item>
        <item>อื่นๆ</item>
    </string-array>
    <string-array name="antecedent">
        <item>นาย</item>
        <item>นาง</item>
        <item>นางสาว</item>
        <item>พระ</item>
        <item>สามเณร</item>
    </string-array>
    <string-array name="type_outside">
        <item>บ้านคอนกรีต</item>
        <item>บ้านไม้</item>
        <item>บ้านครึ่งตึกครึ่งไม้</item>
        <item>อาคารคอนกรีต</item>
        <item>ทาวน์เฮ้าส์</item>
        <item>อาคารพานิช (ตึกแถว)</item>
        <item>อื่นๆ</item>
    </string-array>
    <string-array name="type_feature_out">
        <item>บ้าน</item>
        <item>บ้านข้างเคียง</item>
        <item>ป่า</item>
        <item>ถนน</item>
        <item>ถนนหมู่บ้าน</item>
        <item>สวน</item>
        <item>กุฏิ</item>
    </string-array>
    <string-array name="type_feature_in">
        <item>ห้องนอน</item>
        <item>ห้องนั่งเล่น</item>
        <item>ห้องรับเเขก</item>
        <item>ห้องโถง</item>
        <item>ห้องครัว</item>
        <item>ห้องน้ำ</item>
        <item>โถงทางเดิน</item>
        <item>โถง</item>
        <item>บันได</item>
        <item>ห้องเก็บของ</item>
    </string-array>
    <string-array name="rank_inspector">
        <item>พล.ต.อ.</item>
        <item>พล.ต.อ.หญิง</item>
        <item>พล.ต.ท.</item>
        <item>พล.ต.ท.หญิง</item>
        <item>พล.ต.ต.</item>
        <item>พล.ต.ต.หญิง</item>
        <item>พล.จ.ต.</item>
        <item>พล.จ.ต.หญิง</item>
        <item>พ.ต.อ.</item>
        <item>พ.ต.อ.หญิง</item>
        <item>พ.ต.ท.</item>
        <item>พ.ต.ท.หญิง</item>
        <item>พ.ต.ต.</item>
        <item>พ.ต.ต.หญิง</item>
        <item>ร.ต.อ.</item>
        <item>ร.ต.อ.หญิง</item>
        <item>ร.ต.ท.</item>
        <item>ร.ต.ท.หญิง</item>
        <item>ด.ต.</item>
        <item>ด.ต.หญิง</item>
        <item>จ.ส.ต.</item>
        <item>จ.ส.ต.หญิง</item>
        <item>ส.ต.อ.</item>
        <item>ส.ต.อ.หญิง</item>
        <item>ส.ต.ท.</item>
        <item>ส.ต.ท.หญิง</item>
        <item>ส.ต.ต.</item>
        <item>ส.ต.ต.หญิง</item>
        <item>พลฯ</item>
        <item>พลฯ หญิง</item>
    </string-array>
    <string-array name="inv_position">
        <item>นวท.(สบ4)</item>
        <item>นวท.(สบ3)</item>
        <item>นวท.(สบ2)</item>
        <item>นวท.(สบ1)</item>
        <item>รอง สว.(อก.)</item>
        <item>ผบ.หมู่</item>
    </string-array>
    <string-array name="type_evidence">
        <item>รอยลายนิ้วมือ/ฝ่ามือแฝง</item>
        <item>รอยลายฝ่าเท้าแฝง</item>
        <item>รอยพื้นรองเท้า</item>
        <item>คราบสีแดงคล้ายโลหิต</item>
        <item>เส้นผม/เส้นขน</item>
        <item>เส้นใย</item>
        <item>อื่นๆ</item>
    </string-array>
    <string-array name="gate_clue">
        <item>การงัด</item>
        <item>การเจาะ</item>
    </string-array>
    <string-array name="property_unit">
        <item>บาท</item>
        <item>กระบอก</item>
        <item>ชิ้น</item>
        <item>อัน</item>
        <item>แผ่น</item>
        <item>กล่อง</item>
        <item>เครื่อง</item>
        <item>แท่ง</item>
        <item>ด้าม</item>
        <item>เส้น</item>
        <item>วง</item>
        <item>เรือน</item>
        <item>ใบ</item>
        <item>ตัว</item>
        <item>เล่ม</item>
        <item>ลูก</item>
    </string-array>
</resources>