<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">



    <item android:title="@string/listcase"
        android:id="@+id/nav_item_casescene"
        android:icon="@drawable/ic_home"/>
   <!-- <item android:title="@string/receivingcase"
        android:id="@+id/nav_item_receivingcase"
        android:icon="@drawable/ic_home"/>
    <item android:title="@string/draftcsidata"
        android:id="@+id/nav_item_draft"
        android:icon="@drawable/ic_draft"/>

    <item android:title="@string/fullcsidata"
        android:id="@+id/nav_item_full"
        android:icon="@drawable/ic_full"/>-->



    <item android:title="@string/more">
        <menu>
            <item
                android:title="@string/schedule"
                android:id="@+id/nav_item_schedule"
                android:icon="@drawable/ic_calendar"/>
            <item
                android:title="@string/policelist"
                android:id="@+id/nav_item_police"
                android:icon="@drawable/ic_personlist"/>
          <!--  <item
                android:title="@string/notification"
                android:id="@+id/nav_item_noti"
                android:icon="@drawable/ic_noti"/>-->
        </menu>
    </item>

    <group android:id="@+id/group_settings_id">

        <item android:title="@string/settings"
            android:id="@+id/nav_item_Settings"
            android:icon="@drawable/ic_setting"/>
        <item android:title="@string/logout"
            android:id="@+id/nav_item_logout"
            android:icon="@drawable/ic_exit"/>
    </group>


</menu>