<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawerLayoutSum"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.CoordinatorLayout
        android:id="@+id/rootLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v4.widget.NestedScrollView
            android:id="@+id/ScrollView_summary"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/codelab_fab_margin_right"
            android:layout_marginRight="@dimen/codelab_fab_margin_right"
            android:layout_marginTop="@dimen/codelab_fab_margin_right"

            android:fillViewport="true"

            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/edtUpdateDateTime2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="@dimen/margin_line"
                    android:layout_marginTop="@dimen/margin_line"
                    android:textSize="@dimen/ssmall_text" />

                <LinearLayout
                    android:id="@+id/linearLayoutReportNo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical|center_horizontal"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="3dp"
                        android:text="@string/report_no"
                        android:textStyle="bold"
                        android:textSize="@dimen/small_text" />

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/edtReportNoLayout"
                        android:layout_width="@dimen/width_edtReportNo"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/edtReportNo"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/report_no_2"
                            android:textSize="@dimen/small_text" />
                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>

                <TextView
                    android:id="@+id/txtCaseType"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_line"
                    android:text="@string/case_type"
                    android:textStyle="bold"
                    android:textSize="@dimen/small_text" />

                <Spinner
                    android:id="@+id/spnCaseType"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_line"
                    android:entries="@array/casetype" />

                <TextView
                    android:id="@+id/txtSubCaseType"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_line"
                    android:text="@string/subcase_type"
                    android:textStyle="bold"
                    android:textSize="@dimen/small_text" />

                <Spinner
                    android:id="@+id/spnSubCaseType"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_line"
                    android:entries="@array/subcasetypeproperties" />

                <TextView
                    android:id="@+id/txtInqInfo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_line"
                    android:text="@string/inquiry_txt"
                    android:textStyle="bold"
                    android:textSize="@dimen/small_text" />

                <TextView
                    android:id="@+id/edtInqInfo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/margin_line"
                    android:freezesText="true"
                    android:text=""
                    android:textSize="@dimen/small_text" />

                <TextView
                    android:id="@+id/edtInqTel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/margin_line"
                    android:freezesText="true"
                    android:text="@string/tel_2"
                    android:textColor="@color/ocean"
                    android:textSize="@dimen/small_text" />

                <TextView
                    android:id="@+id/txtInvInfo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_line"
                    android:text="@string/inv_txt"
                    android:textStyle="bold"
                    android:textSize="@dimen/small_text" />

                <TextView
                    android:id="@+id/edtInvInfo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/margin_line"
                    android:freezesText="true"
                    android:text="-"
                    android:textSize="@dimen/small_text" />

                <TextView
                    android:id="@+id/edtInvTel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/margin_line"
                    android:freezesText="true"
                    android:text="@string/tel_2"
                    android:textColor="@color/ocean"
                    android:textSize="@dimen/small_text" />

                <TextView
                    android:id="@+id/txtPoliceStation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_line"
                    android:text="@string/police_station"
                    android:textStyle="bold"
                    android:textSize="@dimen/small_text" />

                <TextView
                    android:id="@+id/edtPoliceStation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/margin_line"
                    android:freezesText="true"
                    android:text=""
                    android:textSize="@dimen/small_text" />

                <TextView
                    android:id="@+id/txtStatusTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_line"
                    android:text="@string/txtStatusTitle"
                    android:textStyle="bold"
                    android:textSize="@dimen/small_text" />

                <TextView
                    android:id="@+id/edtStatus"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/margin_line"
                    android:gravity="center"
                    android:freezesText="true"
                    android:text="@string/edtStatus_1"
                    android:textSize="@dimen/mmedium_text"
                    android:paddingBottom="5dp"
                    android:paddingTop="5dp"
                    android:textColor="@color/white"
                    android:background="#c9302c"/>

                <TextView
                    android:id="@+id/txtSceneNoticeDateTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_line"
                    android:text="@string/txtSceneNoticeDateTime"
                    android:textStyle="bold"
                    android:textSize="@dimen/small_text" />

                <TextView
                    android:id="@+id/edtSceneNoticeDateTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/margin_line"
                    android:freezesText="true"
                    android:text="-"
                    android:textSize="@dimen/mmedium_text" />

                <TextView
                    android:id="@+id/edtCompleteSceneDateTimeTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_line"
                    android:text="@string/edtCompleteSceneDateTimeTitle"
                    android:textStyle="bold"
                    android:textSize="@dimen/small_text" />

                <LinearLayout
                    android:id="@+id/layoutSceneNoticeDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_line"
                    android:layout_marginTop="@dimen/margin_line"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/editSceneNoticeDate"
                        style="@android:style/Widget.Holo.Light.Spinner"
                        android:layout_width="0dp"
                        android:layout_height="50dp"
                        android:layout_column="0"
                        android:layout_weight="1"
                        android:freezesText="true"
                        android:textSize="@dimen/small_text" />

                    <TextView
                        android:id="@+id/editSceneNoticeTime"
                        style="@android:style/Widget.Holo.Light.Spinner"
                        android:layout_width="0dp"
                        android:layout_height="50dp"
                        android:layout_column="1"
                        android:layout_weight="1"
                        android:freezesText="true"
                        android:textSize="@dimen/small_text" />
                </LinearLayout>

                <TextView
                    android:id="@+id/edtCompleteSceneDateTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/margin_line"
                    android:text="-"
                    android:textSize="@dimen/mmedium_text" />

                <TextView
                    android:id="@+id/txtUpdateDateTimeTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_line"
                    android:text="@string/txtUpdateDateTimeTitle"
                    android:textStyle="bold"
                    android:textSize="@dimen/small_text" />

                <TextView
                    android:id="@+id/edtUpdateDateTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/margin_line"
                    android:freezesText="true"
                    android:text="-"
                    android:textSize="@dimen/mmedium_text" />

                <LinearLayout
                    android:id="@+id/layoutButton1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_line"
                    android:layout_marginTop="@dimen/margin_line"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/btnAcceptCase"
                        style="@style/buttonStylePrimary"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginRight="5dp"
                        android:layout_weight="1"
                        android:gravity="center_horizontal|center_vertical"
                        android:padding="5dp"
                        android:text="@string/receive_case" />


                </LinearLayout>

                <LinearLayout
                    android:id="@+id/layoutButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_line"
                    android:layout_marginTop="@dimen/margin_line"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/btnNoticecase"
                        style="@style/buttonStyle"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginRight="5dp"
                        android:layout_weight="1"
                        android:gravity="center_horizontal|center_vertical"
                        android:padding="5dp"
                        android:text="@string/notice_case" />

                    <Button
                        android:id="@+id/btnDownloadfile"
                        style="@style/buttonStyleSuccess"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="5dp"
                        android:layout_weight="1"
                        android:gravity="center_horizontal|center_vertical"
                        android:padding="5dp"
                        android:text="@string/export_doc" />


                </LinearLayout>


            </LinearLayout>
        </android.support.v4.widget.NestedScrollView>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fabBtnSum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|right"
            android:layout_marginBottom="@dimen/codelab_fab_margin_bottom"
            android:layout_marginRight="@dimen/codelab_fab_margin_right"
            android:src="@drawable/ic_saveas_wh"
            app:backgroundTint="@color/orange"
            app:fabSize="normal"
            app:layout_behavior="com.scdc.csiapp.main.ScrollAwareBehavior"
            app:rippleColor="#FFF" />
    </android.support.design.widget.CoordinatorLayout>

</android.support.v4.widget.DrawerLayout>